fix error UI on safari

--- a/src/app/pages/login-launcher/login-launcher.component.scss
+++ b/src/app/pages/login-launcher/login-launcher.component.scss
@@ -264,3 +264,16 @@ textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 1000px transparent inset;
   transition: background-color 5000s ease-in-out 0s;
 }
+
+.login-form {
+    // position: absolute;
+    height: 90%;
+    width: 30%;
+    min-width: 22rem;
+    max-width: 35rem;
+    margin: auto;
+    @media screen and (max-width: 540px) {
+        width: 100%;
+        height: 100%;
+    }
+}
